Don't call setlocale() again when optaining the user's charset, as it's redundant and also causes the GUI to error out due to an unhandled exception when the user has a locale that's not supported by the system.
git-svn-id: https://fslint.googlecode.com/svn/trunk@232 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,6 +1,9 @@
 2.41 dd/mm/yy
 	* Translations:
 		* Updated: Czech.
+	* Fixes:
+		* Start the GUI even if the user's locale is not supported
+		  by the system. This regression was introduced in 2.40.
 
 2.40 21/07/09
 	* Translations:
