Don't set the app $PWD to an arbitrary value that the user types, if the path does not exist. This was a problem after a wildcard was entered for example in the list of paths to exclude. Subsequent use of the file dialog would then popup a warning about a missing path.
git-svn-id: https://fslint.googlecode.com/svn/trunk@234 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -4,6 +4,8 @@
 	* Fixes:
 		* Start the GUI even if the user's locale is not supported
 		  by the system. This regression was introduced in 2.40.
+		* Don't warn about missing paths when adding wildcard paths
+		  to the exclude list. This regression was introduced in 2.40.
 
 2.40 21/07/09
 	* Translations:
