Make finded strip trailing / from parameters as it otherwise it gives incorrect results
git-svn-id: https://fslint.googlecode.com/svn/trunk@235 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -6,6 +6,8 @@
 		  by the system. This regression was introduced in 2.40.
 		* Don't warn about missing paths when adding wildcard paths
 		  to the exclude list. This regression was introduced in 2.40.
+		* finded now produces correct results when passed parameters
+		  with a trailing /. This regression was introduced in 2.40.
 
 2.40 21/07/09
 	* Translations:
