finded now produces correct results when passed empty branches as parameters. Previously it would have returned all the parents of those directories :( Note the GUI will only do os.rmdir() and so will not  actually rm the branch.
git-svn-id: https://fslint.googlecode.com/svn/trunk@236 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -8,6 +8,8 @@
 		  to the exclude list. This regression was introduced in 2.40.
 		* finded now produces correct results when passed parameters
 		  with a trailing /. This regression was introduced in 2.40.
+		* finded now produces correct results when passed empty branches
+		  as parameters. This regression was introduced in 2.40.
 
 2.40 21/07/09
 	* Translations:
