A patch from jari.aalto@cante.net to s/`command`/$(command)/ associated with debian bug #548787
Note this is not just a blind search and replace,
as the following are equivalent:

EPWD=`pwd | sed 's#/#\\\\/#g'`
EPWD=$(pwd | sed 's#/#\\/#g')



git-svn-id: https://fslint.googlecode.com/svn/trunk@239 494acc53-a219-0410-adff-8f8ff343f446

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 fslint (2.41-1) unstable; urgency=low
 
   * bump to devel version
+  * Use POSIX process substitution shell syntax Closes: 548787)
 
  -- Pádraig Brady <P@draigBrady.com>  tue, 21 jul 2009 01:58:00 +0000
 
