--- a/doc/NEWS
+++ b/doc/NEWS
@@ -6,6 +6,8 @@
 		  by the system. This regression was introduced in 2.40.
 		* Don't warn about missing paths when adding wildcard paths
 		  to the exclude list. This regression was introduced in 2.40.
+		* Don't throw an exception when one OKs an empty selection
+		  when adding dirs. This regression was introduced in 2.40.
 		* finded now produces correct results when passed parameters
 		  with a trailing /. This regression was introduced in 2.40.
 		* finded now produces correct results when passed empty branches
