Fix issue 45, where the GUI would error out if it found any files with bad IDs. This typo was introduced in r131
git-svn-id: https://fslint.googlecode.com/svn/trunk@242 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -2,6 +2,8 @@
 	* Translations:
 		* Updated: Czech.
 	* Fixes:
+		* The "Bad IDs" function in the GUI would error out if it found
+		  any items.  This regression was introduced in 2.26.
 		* Start the GUI even if the user's locale is not supported
 		  by the system. This regression was introduced in 2.40.
 		* Don't warn about missing paths when adding wildcard paths
