--- a/doc/NEWS
+++ b/doc/NEWS
@@ -2,6 +2,8 @@
 	* Translations:
 		* Updated: Czech.
 	* Fixes:
+		* Allow the findup script to run on CYGWIN by handling the
+		  different output format of md5sum et. al. on that platform.
 		* The "Bad IDs" function in the GUI would error out if it found
 		  any items.  This regression was introduced in 2.26.
 		* Start the GUI even if the user's locale is not supported
